--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="https://unpkg.com/element-plus/dist/index.css">
   </head>
   <body>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/demo/index.js"></script>
   </body>
 </html>
